PRACTICE 5: add map-struct, flyway, swagger, restController and change test in service level